tests/samples/invalid/missing_address_variable.pn
fn main() -> u8
{
	var ten: u8 = 10;
	var pointer_to_ten: &u8 = ten;
	return: pointer_to_ten
}
